--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+    }
+    .banner {
+      width: 100vw;
+      height: 25vh; /* 25% of the viewport height */
+      background-image: url(https://i.postimg.cc/QMDL1CcY/360-F-218185587-P4zitu-Dt-WJOf-Cl-UKL6mer-I0-Bg-LMIxoe-C.jpg);
+      background-size: cover;
+      background-position: center;
+      position: relative;
+      top: 0;
+      left: 0;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Contact Us</h1>
-  </header>
+  <div class="banner">
+    <header>
+      <h1>Contact Us</h1>
+    </header>
+  </div>
 
   <nav>
     <button onclick="location.href='index.html'">Home</button>
