--- a/testpage.html
+++ b/testpage.html
@@ -14,11 +14,11 @@
     }
     .banner {
         width: 100vw;
-        height: 50vh; /* 50% of the viewport height */
+        height: 25vh; /* 25% of the viewport height */
         background-image: url(https://i.postimg.cc/QMDL1CcY/360-F-218185587-P4zitu-Dt-WJOf-Cl-UKL6mer-I0-Bg-LMIxoe-C.jpg);
         background-size: cover;
         background-position: center;
-        position: absolute;
+        position: relative;
         top: 0;
         left: 0;
     }
@@ -27,11 +27,9 @@
 
 <body>
   <div class="banner">
-    <div>
-        <h1>test</h1>
-        <h5>test2</h5>
-        <button>test3</button>
-    </div>
+    <header>
+      <h1>test</h1>
+    </header>
   </div>
 </body>
 </html>
