--- a/index.html
+++ b/index.html
@@ -69,56 +69,7 @@
 
       <h2>FILLER</h2>
       <p>
-      <p>We teach Private and Group Lessons.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        We host Dance Practice Parties and Dance Showcases.
-        Want to be a competitive dancer? Sign up now and set your goals into ACTION! </p>
+      <p>We teach Private and Group Lessons. We host Dance Practice Parties and Dance Showcases. Want to be a competitive dancer? Sign up now and set your goals into ACTION! </p>
     </div>
   </main>
 
